# CASE-Mapping-Template-Python

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: cicd.yml
case_example_mapping/: __init__.py  dict_to_case.py  rdf_to_case.py
case_mapping/: dict_to_case.py  py.typed  rdf_to_case.py  utilities.py
case_mapping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/: test_file.txt
stubs/: README.md  device-facet.jsonld  device.jsonld
tests/: case_output_test.py
