[metadata]
name = case_example_mapping
version = attr: case_example_mapping.__version__
author = Keith Chason
author_email = keith.chason@cyberdomainontology.org
description = An template repository for generating CASE files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Mapping-Template
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
license_files =
    LICENSE

[options]
include_package_data = true
install_requires =
    rdflib >= 6.2.0
packages = case_example_mapping
python_requires = >=3.9

[options.entry_points]
console_scripts =
    case_from_dict = case_example_mapping.dict_to_case:main
    case_from_rdf = case_example_mapping.rdf_to_case:main

[options.package_data]
case_example_mapping = py.typed
case_example_mapping.ontology = *.ttl

[flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore =
  E203
  E302
  E501

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
